k8s/namespace.yaml
# API version for basic objects
apiVersion: v1
# Namespace = logical folder to group resources
kind: Namespace

# Info about this object
metadata:
  # Name of the namespace
  name: cyber-prod-env
