k8s/postgres-statefulset.yaml
apiVersion: v1
# Service = stable network address for a set of pods
kind: Service
# Info about this service
metadata:
  # Django connects to this DNS name
  name: postgres-service
  # Production namespace
  namespace: cyber-prod-env
# Service config
spec:
  # Route traffic to pods with label app=postgres
  selector:
    app: postgres
  # Ports to expose
  ports:
    # Postgres default port
    - port: 5432
  # ClusterIP = only accessible inside cluster
  type: ClusterIP
