k8s/django-ingress.yaml
# API version for networking objects
apiVersion: networking.k8s.io/v1
# Ingress = opens a door from outside the cluster to your app
kind: Ingress

# Info about this Ingress
metadata:
  # Name
  name: cyber-app-ingress
  # Production namespace
  namespace: cyber-prod-env
  # Extra settings for Nginx
  annotations:
    # Max upload size: 10 MB
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

# Main config
spec:
  # Traffic rules
  rules:
    # Rule for this domain
    - host: ali-devsecops.local
      # HTTP rules
      http:
        # URL path matching
        paths:
          # Match all URLs starting with /
          - path: /
            # Prefix = starts with this path
            pathType: Prefix
            # Where to send traffic
            backend:
              # Points to a Service
              service:
                # Service name
                name: django-service
                # Port number
                port:
                  number: 8000
