k8s/network-policy.yaml
# API version for network policies
apiVersion: networking.k8s.io/v1
# NetworkPolicy = firewall rules between pods
kind: NetworkPolicy
# Info about this policy
metadata:
  # Name: controls access to postgres
  name: postgres-net-policy
  # Namespace for production
  namespace: cyber-prod-env
# Policy rules
spec:
  # Apply this policy to pods with matching labels
  podSelector:
    matchLabels:
      # Target: postgres pods
      app: postgres
  # What type of traffic to filter
  policyTypes:
    # Block incoming traffic by default
    - Ingress
  # Allow some incoming traffic
  ingress:
    # List of allowed sources
    - from:
        # First allowed source: django
        - podSelector:
            matchLabels:
              app: django-web
        # Second allowed source: celery
        - podSelector:
            matchLabels:
              app: celery-worker
      # Which ports can be accessed
      ports:
        # Port 5432 = postgres default
        - port: 5432
          # TCP only
          protocol: TCP
