k8s/redis-net-policy.yaml
# API version for network policies
apiVersion: networking.k8s.io/v1
# NetworkPolicy = firewall rules between pods
kind: NetworkPolicy
# Info about this policy
metadata:
  # Name: controls access to redis
  name: redis-net-policy
  # Namespace for production
  namespace: cyber-prod-env
# Policy rules
spec:
  # Apply to redis pods
  podSelector:
    matchLabels:
      app: redis
  # Filter incoming traffic
  policyTypes:
    # Deny all inbound by default
    - Ingress
  # Allowed sources
  ingress:
    - from:
        # Django can connect
        - podSelector:
            matchLabels:
              app: django-web
        # Celery can connect
        - podSelector:
            matchLabels:
              app: celery-worker
      # Allowed ports
      ports:
        # Port 6379 = redis default
        - port: 6379
          protocol: TCP
